[project]
name = "pyanilist"
version = "0.7.1"
description = "A Python wrapper for the AniList API."
authors = [{ name = "Ravencentric", email = "me@ravencentric.cc" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["anilist", "anime"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "boltons>=24.1.0",
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
]

[project.urls]
Documentation = "https://pyanilist.ravencentric.cc"
Repository = "https://github.com/Ravencentric/pyanilist"

[dependency-groups]
docs = [
    "mkdocs-autorefs>=1.4.1",
    "mkdocs-material>=9.6.9",
    "mkdocstrings[python]>=0.29.0",
]
lint = ["mypy>=1.15.0", "ruff>=0.11.2", "types-boltons>=25.0.0.20250304"]
test = [
    "coverage>=7.7.1",
    "docstring-parser>=0.16",
    "pytest>=8.3.5",
    "pytest-httpx>=0.34.0",
    "pytest-recording>=0.13.2",
    "tomli>=2.1.0",
]
dev = [
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "test" },
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "I",    # https://docs.astral.sh/ruff/rules/#isort-i
    "DTZ",  # https://docs.astral.sh/ruff/rules/#flake8-datetimez-dtz
    "RUF",  # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "UP",   # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "N",    # https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "D4",   # https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "B",    # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "FBT",  # https://docs.astral.sh/ruff/rules/#flake8-boolean-trap-fbt
    "C4",   # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "EM",   # https://docs.astral.sh/ruff/rules/#flake8-errmsg-em
    "ISC",  # https://docs.astral.sh/ruff/rules/multi-line-implicit-string-concatenation/
    "PIE",  # https://docs.astral.sh/ruff/rules/#flake8-pie-pie
    "RET",  # https://docs.astral.sh/ruff/rules/#flake8-raise-rse
    "PL",   # https://docs.astral.sh/ruff/rules/#pylint-pl
    "FURB", # https://docs.astral.sh/ruff/rules/#refurb-furb
    "TC",   # https://docs.astral.sh/ruff/rules/#flake8-type-checking-tc
]
fixable = ["ALL"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["D", "FBT", "PL"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.mypy]
strict = true
pretty = true
enable_error_code = ["ignore-without-code"]

[tool.pytest.ini_options]
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
filterwarnings = ["error"]
log_cli_level = "INFO"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["src/pyanilist/_version.py", "src/pyanilist/_compat.py", "tests/*"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:", # Only used for type-hints
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
